[ridho]- create new pages & refactor some css - WIP

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: #E1C001;
     font-family: Georama;
     font-size: 0.8rem
 }
@@ -19,13 +19,27 @@ a {
     font-size: 0.8rem !important;
 }
 
+.text-md {
+    font-size: 1rem !important;
+}
+
+.text-lg {
+    font-size: 1.5rem !important;
+}
+
 .font-white {
     color: #fff !important;
+}
+
+.font-gray {
+    color: #ABABB5 !important;
 }
 
 .bg-blue {
     background: #131d29;
 }
+
+/* button */
 
 .btn-default {
     color: #ffffff;
@@ -39,6 +53,26 @@ a {
     opacity: 1;
 }
 
+.btn-danger {
+    background: linear-gradient(to bottom, #dc0f0b 0%, #780806 67%, #780806 100%);
+}
+
+.btn-warning {
+    background: #ff9c00;
+    font-weight: bold;
+    color: #031620;
+}
+
+button.close {
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    -webkit-appearance: none;
+}
+
+/* button end */
+
 /* Top-link */
 
 #top-link {
@@ -50,7 +84,7 @@ a {
 /* top-link end */
 
 .news-link {
-    background-color: #4E5D6C;
+    background-color: #3E444C;
     padding: 5px;
     color: #fff;
     text-transform: uppercase;
@@ -335,3 +369,93 @@ a {
 }
 
 /* Bank end */
+
+/* register */
+
+.register-title {
+    background-color: #131d29;
+    border-radius: 4px;
+    padding: 8px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.breadcumb-wrapper {
+    background-color: #4e5d6c;
+    padding: 5px;
+    text-transform: uppercase;
+}
+
+.breadcrumb-item {
+    color: #df691a;
+    font-weight: bolder;
+}
+
+.breadcrumb-item+.breadcrumb-item::before, .breadcrumb-item.active {
+    color: #fff;
+}
+
+/* register end */
+
+/* card-game */
+
+.cardgame {
+    position: relative;
+}
+
+.text-cardgame {
+    width: 60%;
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+    text-align: center;
+    color: #FFF;
+}
+
+.btn-cardgame {
+    width: 40%;
+    position: absolute;
+    bottom: 20px;
+    right: 0px;
+    text-align: center;
+}
+
+.btn-cardgame1 {
+    width: 15%;
+    position: absolute;
+    bottom: 20px;
+    right: 170px;
+    text-align: center;
+}
+
+.btn-cardgame2 {
+    bottom: 20px;
+    left: 25%;
+    position: absolute;
+    right: 25%;
+    text-align: center;
+}
+
+.btn-cardgame3 {
+    bottom: 20px;
+    left: 15%;
+    position: absolute;
+    right: 15%;
+    text-align: center;
+}
+
+.cardgame img {
+    border-radius: 7px;
+}
+
+/* card-game end */
+
+.modal-content {
+    background-color: #4e5d6c;
+    border: 1px solid transparent;
+    border-radius: 0;
+}
+
+.modal-dialog {
+    margin-top: 80px;
+}
